// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Content Storage 1234: removes private solutions 1`] = `
{
  "interactives": {
    "1": {
      "content.json": "{}",
      "h5p.json": "{"title":"this should be stored in folder 1","mainLibrary":"H5P.Blanks","language":"U","license":"","embedTypes":["iframe"],"preloadedDependencies":[],"defaultLanguage":""}",
      "metadata.json": "{"extra":"Something extra"}",
    },
    "1234": {
      "content.json": "{
  "fake": "to make sure it is saved too"
}",
      "h5p.json": "{
  "title": "this should be stored in folder 1234",
  "mainLibrary": "H5P.Blanks",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}",
      "metadata.json": "{
  "collaborator_solutions": [],
  "is_solution_public": false,
  "attachments": []
}",
    },
    "image-test": {
      "media": {
        "_questions.png": "",
        "detailed.png": "",
        "superfluous.png": "",
      },
      "metadata.json": "{"attachments":["media/superfluous.png"]}",
    },
  },
  "private": {
    "interactives": {
      "1234": {
        "content.json": "{
  "questions": [
    "<p>This should not appear in the public folder</p>"
  ]
}",
      },
    },
  },
}
`;

exports[`File Content Storage 12345: leaves public solutions 1`] = `
{
  "interactives": {
    "1": {
      "content.json": "{}",
      "h5p.json": "{"title":"this should be stored in folder 1","mainLibrary":"H5P.Blanks","language":"U","license":"","embedTypes":["iframe"],"preloadedDependencies":[],"defaultLanguage":""}",
      "metadata.json": "{"extra":"Something extra"}",
    },
    "12345": {
      "content.json": "{
  "fake": "to make sure it is saved too",
  "questions": [
    "<p>This should appear in the public folder</p>"
  ]
}",
      "h5p.json": "{
  "title": "this should be stored in folder 12345",
  "mainLibrary": "H5P.Blanks",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}",
      "metadata.json": "{
  "collaborator_solutions": [],
  "is_solution_public": true,
  "attachments": []
}",
    },
    "image-test": {
      "media": {
        "_questions.png": "",
        "detailed.png": "",
        "superfluous.png": "",
      },
      "metadata.json": "{"attachments":["media/superfluous.png"]}",
    },
  },
}
`;

exports[`File Content Storage saves content as expected 1`] = `
{
  "interactives": {
    "1": {
      "content.json": "{}",
      "h5p.json": "{
  "title": "this should be stored in folder 1",
  "mainLibrary": "H5P.Blanks",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}",
      "metadata.json": "{
  "extra": "Something extra",
  "collaborator_solutions": [],
  "is_solution_public": true,
  "books": [
    {
      "name": "stax-test",
      "lo": [
        "1-2-3"
      ]
    }
  ],
  "attachments": []
}",
    },
    "1234": {
      "content.json": "{}",
      "h5p.json": "{
  "title": "this should be stored in folder 1234",
  "mainLibrary": "H5P.Blanks",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}",
      "metadata.json": "{
  "collaborator_solutions": [],
  "is_solution_public": true,
  "attachments": []
}",
    },
    "2": {
      "content.json": "{}",
      "h5p.json": "{
  "title": "this should be stored in folder 2",
  "mainLibrary": "H5P.Blanks",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}",
      "metadata.json": "{
  "collaborator_solutions": [],
  "is_solution_public": true,
  "attachments": []
}",
    },
    "image-test": {
      "content.json": "{
  "text": "<p>Fill in the missing words</p>\\n        <p><img src=\\"media/test.png\\"/></p>\\n        "
}",
      "h5p.json": "{
  "title": "default title",
  "mainLibrary": "H5P.Blanks",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}",
      "media": {
        "_questions.png": "",
        "detailed.png": "",
        "superfluous.png": "",
        "test.png": "<insert contents of images/not-used.png>",
      },
      "metadata.json": "{
  "attachments": [
    "media/test.png",
    "media/detailed.png",
    "media/_questions.png"
  ],
  "collaborator_solutions": [
    {
      "content": "<img src=\\"media/detailed.png\\"/>",
      "solution_type": "detailed"
    }
  ],
  "is_solution_public": true,
  "_questions": [
    {
      "content": "<p><img src=\\"media/_questions.png\\"/></p>"
    }
  ]
}",
    },
  },
}
`;
